--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/schedule.js", "use": "@vercel/node" }
+    { "src": "api/schedule.js", "use": "@vercel/node" },
+    { "src": "public/**/*", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "api/schedule.js" },
-    { "src": "/(.*)", "dest": "public/index.html" }
+    { "src": "/api/(.*)", "dest": "api/schedule.js" }
   ]
 }
